Ease-of-use fixes (#470)
- the switch from TestContainer mounts to copying files to and from the container introduced a requirement for users to ensure the `creek/mounts/coverage` dir exists. With this change, this is no longer required.

Co-authored-by: Andy Coates <big-andy-coates@users.noreply.github.com>